test unit + doc pour la création d'un entrainement
