# models/entrainement.js
@@ -1,36 +1,48 @@
 const { DataTypes} = require('sequelize');
 const sequelize = require('../config/mysql');
+const {Kine} = require('./kine');
 
-
-const Entrainement = sequelize.define('Entrainement', {
+const Entrainement = sequelize.define('entrainement', {
     nom : {
         type: DataTypes.STRING,
         allowNull: false
+    },
+  
+
+ 
+    gif : {
+        type  : DataTypes.STRING,
+        allowNull: true,
+        defaultValue: null
+    },
+    niveau: {
+        type : DataTypes.STRING,
+        validate: {
+            isIn: [['debutant','intermediaire','expert']]
+        },
+        allowNull: false,
+        
     },
     commentaire : {
         type: DataTypes.STRING,
         allowNull: false
     },
-
-    objectif : {
-        type: DataTypes.STRING,
-        allowNull: false
-    },
-    rating : {
-        type  : DataTypes.TINYINT,
+    id_kine : {
+        type: DataTypes.INTEGER,
         allowNull: false,
-        defaultValue: 0
-    },
-    niveau: {
-        type : DataTypes.STRING,
-        allowNull: false,
-        defaultValue: 'débutant'
+        references: {
+            model: Kine,
+            key: 'id'
+        }
     }
-    //entraineur ID
-    // perfomance ID
+
 },
 {
-    engine : 'INNODB'
+    engine : 'INNODB',
+    freezeTableName : true,
+    timestamps: false,
+    createdAt: false,
+    updatedAt: false,
 })
 
 module.exports = Entrainement;
